build/log/idf_py_stdout_output_1001535
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/shop-electronic/project/esp32/evm_java/build/bootloader/esp-idf/esptool_py && /home/shop-electronic/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/shop-electronic/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/shop-electronic/project/esp32/evm_java/build/bootloader/bootloader.bin
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/app_manager/CMakeFiles/__idf_app_manager.dir/app_manager.c.obj
FAILED: esp-idf/app_manager/CMakeFiles/__idf_app_manager.dir/app_manager.c.obj 
/home/shop-electronic/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-3141-g57c4508eb3\" -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/shop-electronic/project/esp32/evm_java/build/config -I/home/shop-electronic/project/esp32/evm_java/components/app_manager/include -I/home/shop-electronic/esp/esp-idf/components/newlib/platform_include -I/home/shop-electronic/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/shop-electronic/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/shop-electronic/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/shop-electronic/esp/esp-idf/components/freertos/esp_additions/include -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/include -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/include/soc -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/shop-electronic/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/shop-electronic/esp/esp-idf/components/heap/include -I/home/shop-electronic/esp/esp-idf/components/log/include -I/home/shop-electronic/esp/esp-idf/components/soc/include -I/home/shop-electronic/esp/esp-idf/components/soc/esp32 -I/home/shop-electronic/esp/esp-idf/components/soc/esp32/include -I/home/shop-electronic/esp/esp-idf/components/hal/esp32/include -I/home/shop-electronic/esp/esp-idf/components/hal/include -I/home/shop-electronic/esp/esp-idf/components/hal/platform_port/include -I/home/shop-electronic/esp/esp-idf/components/esp_rom/include -I/home/shop-electronic/esp/esp-idf/components/esp_rom/include/esp32 -I/home/shop-electronic/esp/esp-idf/components/esp_rom/esp32 -I/home/shop-electronic/esp/esp-idf/components/esp_common/include -I/home/shop-electronic/esp/esp-idf/components/esp_system/include -I/home/shop-electronic/esp/esp-idf/components/esp_system/port/soc -I/home/shop-electronic/esp/esp-idf/components/esp_system/port/include/private -I/home/shop-electronic/esp/esp-idf/components/xtensa/include -I/home/shop-electronic/esp/esp-idf/components/xtensa/esp32/include -I/home/shop-electronic/esp/esp-idf/components/lwip/include -I/home/shop-electronic/esp/esp-idf/components/lwip/include/apps -I/home/shop-electronic/esp/esp-idf/components/lwip/include/apps/sntp -I/home/shop-electronic/esp/esp-idf/components/lwip/lwip/src/include -I/home/shop-electronic/esp/esp-idf/components/lwip/port/include -I/home/shop-electronic/esp/esp-idf/components/lwip/port/freertos/include -I/home/shop-electronic/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/shop-electronic/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/shop-electronic/project/esp32/evm_java/components/evm_loader/include -I/home/shop-electronic/project/esp32/evm_java/components/mujs -I/home/shop-electronic/esp/esp-idf/components/driver/include -I/home/shop-electronic/esp/esp-idf/components/driver/deprecated -I/home/shop-electronic/esp/esp-idf/components/driver/esp32/include -I/home/shop-electronic/esp/esp-idf/components/esp_pm/include -I/home/shop-electronic/esp/esp-idf/components/esp_ringbuf/include -I/home/shop-electronic/project/esp32/evm_java/components/evm_modules/include -I/home/shop-electronic/project/esp32/evm_java/components/hardware_manager/include -I/home/shop-electronic/esp/esp-idf/components/fatfs/diskio -I/home/shop-electronic/esp/esp-idf/components/fatfs/vfs -I/home/shop-electronic/esp/esp-idf/components/fatfs/src -I/home/shop-electronic/esp/esp-idf/components/wear_levelling/include -I/home/shop-electronic/esp/esp-idf/components/esp_partition/include -I/home/shop-electronic/esp/esp-idf/components/sdmmc/include -I/home/shop-electronic/project/esp32/evm_java/components/lvgl -I/home/shop-electronic/project/esp32/evm_java/components/lvgl/src -I/home/shop-electronic/project/esp32/evm_java/components/mongoose/include -I/home/shop-electronic/esp/esp-idf/components/esp_timer/include -I/home/shop-electronic/esp/esp-idf/components/json/cJSON -I/home/shop-electronic/esp/esp-idf/components/nvs_flash/include -I/home/shop-electronic/esp/esp-idf/components/spi_flash/include -I/home/shop-electronic/esp/esp-idf/components/esp_wifi/include -I/home/shop-electronic/esp/esp-idf/components/esp_event/include -I/home/shop-electronic/esp/esp-idf/components/esp_phy/include -I/home/shop-electronic/esp/esp-idf/components/esp_phy/esp32/include -I/home/shop-electronic/esp/esp-idf/components/esp_netif/include -I/home/shop-electronic/project/esp32/evm_java/components/shared_hardware/include -I/home/shop-electronic/esp/esp-idf/components/esp_psram/include -I/home/shop-electronic/project/esp32/evm_java/components/lv-fs -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fmacro-prefix-map=/home/shop-electronic/project/esp32/evm_java=. -fmacro-prefix-map=/home/shop-electronic/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/app_manager/CMakeFiles/__idf_app_manager.dir/app_manager.c.obj -MF esp-idf/app_manager/CMakeFiles/__idf_app_manager.dir/app_manager.c.obj.d -o esp-idf/app_manager/CMakeFiles/__idf_app_manager.dir/app_manager.c.obj -c /home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c: In function 'load_and_decode_png_manual':
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c:702:5: error: implicit declaration of function 'lodepng_free'; did you mean 'lodepng_crc32'? [-Werror=implicit-function-declaration]
  702 |     lodepng_free(png_data);
      |     ^~~~~~~~~~~~
      |     lodepng_crc32
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c: In function 'test_simple_png_load':
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c:754:34: error: 'load_btn_event_handler' undeclared (first use in this function)
  754 |         lv_obj_add_event_cb(btn, load_btn_event_handler, LV_EVENT_CLICKED, NULL);
      |                                  ^~~~~~~~~~~~~~~~~~~~~~
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c:754:34: note: each undeclared identifier is reported only once for each function it appears in
At top level:
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c:765:13: warning: 'load_btn_event_handler' defined but not used [-Wunused-function]
  765 | static void load_btn_event_handler(lv_event_t * e) {
      |             ^~~~~~~~~~~~~~~~~~~~~~
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c:606:22: warning: 'create_lvgl_image_from_rgba' defined but not used [-Wunused-function]
  606 | static lv_img_dsc_t* create_lvgl_image_from_rgba(unsigned char* rgba_data, unsigned width, unsigned height) {
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c:519:13: warning: 'create_analog_clock_with_images' defined but not used [-Wunused-function]
  519 | static void create_analog_clock_with_images(void) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c:432:13: warning: 'test_basic_colors_immediately1' defined but not used [-Wunused-function]
  432 | static void test_basic_colors_immediately1(void) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/shop-electronic/project/esp32/evm_java/components/app_manager/app_manager.c:196:13: warning: 'get_real_app_name' defined but not used [-Wunused-function]
  196 | static void get_real_app_name(const char *file_path, char *display_name) {
      |             ^~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
